# chat_room_prog2

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20260522_114626_soba.rs  m20260522_114706_message.rs  m20260522_114715_client.rs  m20260531_000001_client_geslo.rs  m20260531_000002_message_soba_id.rs  m20260719_000001_client_username_unique.rs
src/: lib.rs  main.rs
src/client/: mod.rs
src/common/: mod.rs
src/controller/: auth.rs  cli.rs  forms.rs  mod.rs  rooms.rs  tipi.rs  web.rs
src/entities/: client.rs  message.rs  mod.rs  prelude.rs  soba.rs
src/html/: authorisation.html  index.html
src/podatkovni_tipi/: mod.rs  soba.rs  sporocila.rs  user.rs
src/server/: connection.rs  mod.rs  state.rs
static/: authorisation.html  index.html
tests/: integration.rs
