[package]
name = "chat_room_prog2"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros", "mock" ] }
sea-orm-migration = { version = "1.1.20", features = [ "sqlx-sqlite", "runtime-tokio-rustls" ] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
tower-http = { version = "0.6", features = ["fs"] }
argon2 = "0.5"
rand = { version = "0.8", features = ["std"] }
migration = { path = "migration" }

[workspace]
members = [".",
    "migration"
]